internal/gatewayapi/testdata/envoyextensionpolicy-with-extproc-name-merge-gateways-tls.out.yaml
envoyExtensionPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    name: policy-for-httproute-1
    namespace: envoy-gateway
  spec:
    extProc:
    - backendRefs:
      - name: grpc-backend-1
        port: 9000
      name: auth
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: https
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    name: policy-for-httproute-2
    namespace: envoy-gateway
  spec:
    extProc:
    - backendRefs:
      - name: grpc-backend-2
        port: 9000
      name: auth
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-2
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: https
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.example.com'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - name: tls-secret-example-com
        mode: Terminate
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: https
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: foo.bar.com
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - name: tls-secret-foo-bar-com
        mode: Terminate
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: https
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: envoy-gateway
  spec:
    hostnames:
    - foo.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: https
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: https
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-2
    namespace: envoy-gateway
  spec:
    hostnames:
    - foo.bar.com
    parentRefs:
    - name: gateway-2
      namespace: envoy-gateway
      sectionName: https
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /bar
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2
        namespace: envoy-gateway
        sectionName: https
infraIR:
  envoy-gateway-class:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          logging: {}
          mergeGateways: true
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/https
        ports:
        - containerPort: 10443
          name: https-443
          protocol: HTTPS
          servicePort: 443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway-class
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway-class:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-class-3b1df594
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway-class
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-class-3b1df594
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway-class
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 443
      hostnames:
      - '*.example.com'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: https
      name: envoy-gateway/gateway-1/https
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10443
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 1.1.1.1
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: envoy-gateway
              sectionName: "8080"
            name: httproute/envoy-gateway/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        envoyExtensions:
          extProcs:
          - authority: grpc-backend-1.envoy-gateway:9000
            customName: auth
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-httproute-1
                namespace: envoy-gateway
              name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-1/extproc/0
              settings:
              - addressType: IP
                endpoints:
                - host: 7.7.7.7
                  port: 9000
                metadata:
                  kind: Service
                  name: grpc-backend-1
                  namespace: envoy-gateway
                  sectionName: "9000"
                name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-1/extproc/0/backend/0
                protocol: GRPC
                weight: 1
            name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-1/extproc/0
            statPrefix: auth
        hostname: foo.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-1/rule/0/match/0/foo_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
      tls:
        alpnProtocols: null
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR3RENDQXFpZ0F3SUJBZ0lVVDRyelIreStHd1VzMm9ydExIZ0k1MzBKeG9Fd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5UQTBNakl3TWpVNU1UQmFGdzB6TlRBME1qQXdNalU1TVRCYU1EVXhGREFTQmdOVkJBTU1DMlp2CmJ5NWlZWEl1WTI5dE1SMHdHd1lEVlFRS0RCUmxlR0Z0Y0d4bElHOXlaMkZ1YVhwaGRHbHZiakNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTE4wbnJNR1NZNjBPT0JuTFVaSGpCRFkxazhqWHA2RwppeG1Ra [...]
          name: envoy-gateway/tls-secret-example-com
          privateKey: '[redacted]'
    - address: 0.0.0.0
      externalPort: 443
      hostnames:
      - foo.bar.com
      metadata:
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: https
      name: envoy-gateway/gateway-2/https
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10443
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-2
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 1.1.1.1
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: envoy-gateway
              sectionName: "8080"
            name: httproute/envoy-gateway/httproute-2/rule/0/backend/0
            protocol: HTTP
            weight: 1
        envoyExtensions:
          extProcs:
          - authority: grpc-backend-2.envoy-gateway:9000
            customName: auth
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-httproute-2
                namespace: envoy-gateway
              name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-2/extproc/0
              settings:
              - addressType: IP
                endpoints:
                - host: 8.8.8.8
                  port: 9000
                metadata:
                  kind: Service
                  name: grpc-backend-2
                  namespace: envoy-gateway
                  sectionName: "9000"
                name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-2/extproc/0/backend/0
                protocol: GRPC
                weight: 1
            name: envoyextensionpolicy/envoy-gateway/policy-for-httproute-2/extproc/0
            statPrefix: auth
        hostname: foo.bar.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-2
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-2/rule/0/match/0/foo_bar_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /bar
      tls:
        alpnProtocols: null
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0FRQXdEUVlKS29aSWh2Y05BUUVMQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkoKYm1NdU1SUXdFZ1lEVlFRRERBdGxlR0Z0Y0d4bExtTnZiVEFlRncweU5UQTBNakV3T1RFNU1qWmFGdzB6TlRBMApNVGt3T1RFNU1qWmFNRFV4RkRBU0JnTlZCQU1NQzJadmJ5NWlZWEl1WTI5dE1SMHdHd1lEVlFRS0RCUmxlR0Z0CmNHeGxJRzl5WjJGdWFYcGhkR2x2YmpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU5JZzRNWUMvVlV6ZVRMN3Z1ai9pSXNwYTVrd0dyZTFvVGVCd2JYTFk1dmlxRXlicjRraWRQbTVXaFdPdm9GTwpuK0t6Q [...]
          name: envoy-gateway/tls-secret-foo-bar-com
          privateKey: '[redacted]'
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
